packages/build/tests/error/monitor/fixtures/fail_plugin/plugin.js
module.exports = {
  onPreBuild({
    utils: {
      build: { failPlugin },
    },
  }) {
    failPlugin('test')
  },
}
